# abm-enterprise-coping

./: .gitignore  ABM_Enterprise_Coping_Model.html  ABM_Enterprise_Coping_Model.qmd  CLAUDE.md  Makefile  pyproject.toml  references.bib
R/: analysis_helpers.R  plot_theme.R
analysis/: .Rprofile  .gitignore  Makefile
analysis/R/: read_simulation.R  validation_helpers.R
analysis/quarto/: _quarto.yml  portability_report.qmd  validation_report.qmd
analysis/renv/: activate.R  settings.json
analysis/tests/: test_read_simulation.R  test_validation.R
artifacts/calibration/tanzania/: calibration.json  calibration_manifest.json
config/: ethiopia.yaml  tanzania.yaml
data/prices/: ethiopia_prices.csv  tanzania_prices.csv
docs/: CODE_REVIEW.md  CODE_REVIEW_DOC_AUDIT.md  CODE_REVIEW_FINAL.md  CONOPS.md  DATA_AUDIT.md  DATA_AUDIT_REMEDIATION.md  DATA_CONTRACT.md  DECISIONS.md  DOC_CHANGELOG.md  EXTERNAL_MODEL_CALL_LOGS.md  EXTERNAL_REVIEW.md  PROJECT_STATE.md  REFACTOR_PLAN_SYNTHETIC_LLM.md  REPRODUCIBILITY.md  RUNBOOK.md  RUN_LOG.md  THRESHOLD_JUSTIFICATION.md  VALIDATION_CONTRACT.md  abm_report.qmd  measurement_mapping.csv  paper.qmd
docs/research/: 2026-01-14_deepresearch.md  2026-01-14_deepresearch_methodology.md  2026-01-14_o3.md  2026-01-14_phase0_ground_truth.md  2026-01-14_synthesis.md  abm_validation_guidance.md  deep_research_full_output.md  deep_research_output.md
outputs/: README.md
scripts/: run_batch.py  run_behavior_search.py  run_sweep.py
src/abm_enterprise/: __init__.py  cli.py  model.py  outputs.py
src/abm_enterprise/agents/: __init__.py  household.py
src/abm_enterprise/calibration/: __init__.py  fit.py  schemas.py
src/abm_enterprise/data/: __init__.py  schemas.py  synthetic.py
src/etl/: __init__.py  canonical.py  derive.py  ingest.py  prices.py  schemas.py
tests/: __init__.py  conftest.py  test_calibration.py  test_direct_prediction.py  test_etl.py  test_integration.py  test_llm_policy.py  test_manifest.py  test_model.py  test_rng.py  test_schemas.py  test_synthetic_panel.py  test_voting.py
(+18 files in other folders)
